# voice-cloner

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  package.json
src-tauri/: Cargo.toml  deny.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: error.rs  mod.rs  state.rs  trace.rs
src-tauri/src/audio/: device_manager.rs  engine.rs  frame.rs  mod.rs  normalizer.rs  post_processor.rs  preview_player.rs  reference_audio.rs
src-tauri/src/audio/virtual_mic/: adapter.rs  mod.rs
src-tauri/src/clients/: local_llm.rs  mod.rs
src-tauri/src/clients/funspeech/: asr.rs  mod.rs  offline.rs  realtime.rs  tts.rs  voice_design.rs  voice_manager.rs
src-tauri/src/desktop/: window_manager.rs
src-tauri/src/domain/: mod.rs  offline_job.rs  runtime_params.rs  session.rs  settings.rs  voice.rs  voice_design.rs  voice_separation.rs  voice_sync.rs
src-tauri/src/services/: asset_cache.rs  mcp_server_manager.rs  mod.rs  offline_job_manager.rs  realtime_full_chain_tester.rs  realtime_stream_manager.rs  session_manager.rs  settings_manager.rs  voice_design_manager.rs  voice_library.rs  voice_separation_manager.rs  voice_sync_manager.rs
src-tauri/src/services/sidecar/: mod.rs  (+2 more)
src-tauri/src/storage/: app_paths.rs  json_store.rs  mod.rs
src-tauri/src/tauri_api/: app_commands.rs  audio_commands.rs  mod.rs  offline_commands.rs  realtime_commands.rs  settings_commands.rs  voice_design_commands.rs  voice_separation_commands.rs  voice_sync_commands.rs
(+51 files in other folders)
