[package]
name = "voice-cloner"
version = "0.1.0"
description = "Minimal Tauri backend skeleton for the voice-cloner desktop app."
authors = ["chaorenex1 243537608z@gmail.com"]
license = "apache-2.0"
edition = "2021"
readme = "README.md"

[build-dependencies]
tauri-build = { version = "^2.0.0", features = [] }

[dependencies]
tauri = { version = "^2.0.0", features = [] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "stream", "rustls-tls"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.15"
ringbuf = "0.4"
hound = "3.5"
async-openai = "0.38.0"
tauri-plugin-dialog = "2"

[features]
default = []

[package.metadata.bundle]
identifier = "com.aduib.voicecloner"

[package.metadata.tauri-winres]
ProductName = "voice-cloner"
FileDescription = "Minimal Tauri backend skeleton for the voice-cloner desktop app."
LegalCopyright = "Copyright (c) 2026"
Icon = "icons/icon.ico"
